# fuzzit

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.cargo/: config.toml
flamegraph/: README.md
releasing/: README.md  release.sh
src/: cache.rs  diff.rs  diff.zig  git_data.rs  main.rs  main.zig  status.rs  status.zig  utils.rs  utils.zig
