[package]
name = "fuzzit"
version = "1.0.0"
edition = "2024"
description = "Fuzzy nested git repo finder with status and diff previews"
repository = "https://github.com/dawitalemu4/fuzzit"
readme = "README.md"
keywords = ["fuzzy", "git"]
categories = ["Virtualization"]

[lints.rust]
unsafe_code = "deny"
future_incompatible = { level = "deny", priority = -1 }
meta_variable_misuse = "warn"
missing_debug_implementations = "warn"
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
trivial_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_macro_rules = "warn"
variant_size_differences = "warn"
non_snake_case = "allow"

[lints.clippy]
default_union_representation = "deny"
exit = "deny"
lossy_float_literal = "deny"
mem_forget = "deny"
multiple_inherent_impl = "deny"
mut_mut = "deny"
ptr_as_ptr = "deny"
unwrap_in_result = "deny"
unwrap_used = "deny"
wildcard_dependencies = "deny"
dbg_macro = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
inefficient_to_string = "warn"
macro_use_imports = "warn"
match_same_arms = "warn"
no_effect_underscore_binding = "warn"
panic = "warn"
print_stderr = "warn"
same_name_method = "warn"
single_char_lifetime_names = "warn"
string_to_string = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
unimplemented = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
used_underscore_binding = "warn"

[dependencies]
clap = { version = "4.5.48", features = ["env", "derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
ratatui = "0.29.0"
rayon = "1.11.0"
